--- a/app/views/application/home.html.erb
+++ b/app/views/application/home.html.erb
@@ -1,8 +1,5 @@
 <div class="home">
   <h1>Teamtailor API</h1>
   <p>CSV file containing the candidate's data.</p>
-  <button>View data</button>
-  <br>
-  <button>Download data</button>
-  <pre><%= JSON.pretty_generate(@csv_rows) %></pre>
+  <div class="download-button"><%= link_to "Download data", "/export.csv", download: ["Candidates", Date.today].join(" ") %></div>
 </div>
