--- a/app/views/application/home.html.erb
+++ b/app/views/application/home.html.erb
@@ -1,5 +1,5 @@
 <div class="home">
   <h1>Teamtailor API</h1>
   <p>CSV file containing the candidate's data.</p>
-  <div class="download-button"><%= link_to "Download data", "/export.csv", download: ["Candidates", Date.today].join(" ") %></div>
+  <div class="download-button"><%= link_to "Download data", "/export.csv" %></div>
 </div>
