--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,113 +2,106 @@
 <html>
   <head>
     <title>Team Tailor assignment</title>
-  <style>
-  body {
-    margin: 0;
-  }
-  
-  header {
-    background-color: rgb(52,53,58);
-    width: 100%;
-    height: 50px;
-    padding: 15px;
-  }
-  
-  footer {
-    background-color: rgb(52,53,58);
-    width: 100%;
-    height: 25px;
-    padding: 15px;
-    font-family: Open Sans, sans-serif;
-    letter-spacing: 2px;
-    position: absolute;
-    bottom: 0;
-  }
-  
-  footer a {
-    color: rgb(244,63,133);
-    font-family: Open Sans, sans-serif;
-    letter-spacing: 2px;
-    text-decoration: none;
-    
-  }
-  
-  .home {
-    padding: 15px;
-  }
-  
-  h1 {
-    font-size: 30px;
-    color: rgb(40, 40, 40);
-    font-family: Open Sans, sans-serif;
-    font-weight: normal;
-  }
-  
-  p {
-    font-size: 14px;
-    color: rgb(40, 40, 40);
-    font-family: Open Sans, sans-serif;
-    font-weight: normal;
-    letter-spacing: 3px;
-  }
-  
-  .home a {
-    color: #FFFFFF;
-    font-family: Open Sans, sans-serif;
-    letter-spacing: 2px;
-    text-decoration: none;
-  }
-  
-  .download-button {
-    background-color: #EA4C89;
-    border-radius: 8px;
-    border-style: none;
-    box-sizing: border-box;
-    color: #FFFFFF;
-    cursor: pointer;
-    font-size: 14px;
-    font-weight: 500;
-    height: 40px;
-    line-height: 20px;
-    outline: none;
-    padding: 10px 16px;
-    position: relative;
-    text-align: center;
-    text-decoration: none;
-    transition: color 100ms;
-    vertical-align: baseline;
-    -webkit-user-select: none;
-    touch-action: manipulation;
-    display: block;
-    margin-right: auto;
-    margin-left: auto;
-    margin-top: 30px;
-    width: 200px;
-  }
-  
-  .download-button:hover,
-  .download-button:focus {
-    background-color: #F082AC;
-  }
-  
-  </style>
-  
+    <style> 
+      html, body {
+        height: 100%;
+        margin: 0;
+      }
+      
+      .content {
+        min-height: 100%;
+      }
+      
+      .content-inside {
+        padding-bottom: 50px;
+      }
+      
+      header {
+        background-color: rgb(52,53,58);
+        height: 50px;
+        padding: 15px;
+      }
+      
+      .footer {
+        background-color: rgb(52,53,58);
+        height: 50px;
+        line-height: 50px;
+        padding-left: 15px;
+        font-family: Open Sans, sans-serif;
+        letter-spacing: 2px;
+        margin-top: -50px;
+        font-size: smaller;
+      }
+      
+      footer a {
+        color: rgb(244,63,133);
+        font-family: Open Sans, sans-serif;
+        letter-spacing: 2px;
+        text-decoration: none;
+      }
+      
+      .home {
+        padding: 15px;
+      }
+      
+      h1 {
+        font-size: 30px;
+        color: rgb(40, 40, 40);
+        font-family: Open Sans, sans-serif;
+        font-weight: normal;
+      }
+      
+      p {
+        font-size: 14px;
+        color: rgb(40, 40, 40);
+        font-family: Open Sans, sans-serif;
+        font-weight: normal;
+        letter-spacing: 3px;
+      }
+      
+      .home a {
+        color: #FFFFFF;
+        font-family: Open Sans, sans-serif;
+        letter-spacing: 2px;
+        text-decoration: none;
+      }
+      
+      .download-button {
+        background-color: #EA4C89;
+        border-radius: 8px;
+        box-sizing: border-box;
+        color: #FFFFFF;
+        cursor: pointer;
+        font-size: 14px;
+        padding: 10px 16px;
+        text-align: center;
+        transition: color 100ms;
+        margin-right: auto;
+        margin-left: auto;
+        margin-top: 30px;
+        width: 200px;
+      }
+      
+      .download-button:hover,
+      .download-button:focus {
+        background-color: #F082AC;
+      }
+    </style>
   </head>
 
   <body>
-    <header>
-      <%= link_to image_tag("logo.png", alt: "Logo", width: "50px") %>
-    </header>
-    
-    <%= yield %>
-    
-    <footer>
-      <small>
-        Created by <a href=https://github.com/klaudia-klis>Klaudia Kliś</a>
-      </small>
+    <div class="content">
+      
+      <div class="content-inside">
+        <header>
+          <%= link_to image_tag("logo.png", alt: "Logo", width: "50px") %>
+        </header>
+        <%= yield %>
+      </div>
+    </div>
+        
+    <footer class="footer">
+      Created by <a href="https://github.com/klaudia-klis">Klaudia Kliś</a>
     </footer>
   </body>
-  
-  
-  
 </html>
